debug: fix mutiple bugs
