# docs/swagger.json
@@ -177,7 +177,7 @@
                 }
             }
         },
-        "/videos/:videoID": {
+        "/video/:videoID": {
             "get": {
                 "description": "get a video by id",
                 "tags": [
@@ -197,9 +197,9 @@
                 }
             }
         },
-        "/videos/chann/:channId": {
+        "/video/chann/:channId": {
             "get": {
-                "description": "get all videos from a channel",
+                "description": "get all video from a channel",
                 "tags": [
                     "Videos"
                 ],
